--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -71,44 +71,34 @@ jobs:
             echo "🚀 Mulai deployment Laravel (Secure Production + Public Backup)..."
 
             # -------------------------------
-            # 1. Folder target & backup
+            # 1. Tentukan folder
             # -------------------------------
             WEB_ROOT=~/domains/management-pinetmart.srf-group.com/public_html
             LARAVEL_DIR=~/domains/management-pinetmart.srf-group.com/management_apk
             BACKUP_FOLDER=~/domains/management-pinetmart.srf-group.com/backup_$(date +%Y%m%d_%H%M%S)
-            DB_BACKUP=~/domains/management-pinetmart.srf-group.com/db_backup_$(date +%Y%m%d_%H%M%S).sql
 
             mkdir -p $BACKUP_FOLDER
 
             # -------------------------------
-            # 2. Backup DB
-            # -------------------------------
-            echo "💾 Backup database"
-            mysqldump -u ${{ secrets.DB_USER }} -p${{ secrets.DB_PASS }} ${{ secrets.DB_NAME }} > $DB_BACKUP || echo "⚠️ DB backup gagal"
-
-            # -------------------------------
-            # 3. Backup storage Laravel + public_html (upload user)
+            # 2. Backup storage Laravel + public_html
             # -------------------------------
             echo "💾 Backup storage Laravel"
-            cp -r $LARAVEL_DIR/storage $BACKUP_FOLDER/storage
+            mkdir -p $LARAVEL_DIR/storage $LARAVEL_DIR/bootstrap/cache
+            cp -r $LARAVEL_DIR/storage $BACKUP_FOLDER/storage || echo "⚠️ Backup storage Laravel gagal, folder kosong"
 
             echo "💾 Backup storage publik (public_html/uploads atau storage publik)"
             mkdir -p $BACKUP_FOLDER/public
-            if [ -d "$WEB_ROOT/storage" ]; then
-              cp -r $WEB_ROOT/storage $BACKUP_FOLDER/public/storage
-            fi
-            if [ -d "$WEB_ROOT/uploads" ]; then
-              cp -r $WEB_ROOT/uploads $BACKUP_FOLDER/public/uploads
-            fi
+            [ -d "$WEB_ROOT/storage" ] && cp -r $WEB_ROOT/storage $BACKUP_FOLDER/public/storage
+            [ -d "$WEB_ROOT/uploads" ] && cp -r $WEB_ROOT/uploads $BACKUP_FOLDER/public/uploads
 
             # -------------------------------
-            # 4. Aktifkan maintenance mode
+            # 3. Aktifkan maintenance mode
             # -------------------------------
             echo "🛠️ Aktifkan maintenance mode"
             php $LARAVEL_DIR/artisan down || echo "⚠️ Gagal aktifkan maintenance mode"
 
             # -------------------------------
-            # 5. Clone / update repo Laravel
+            # 4. Clone / update repo Laravel
             # -------------------------------
             mkdir -p $LARAVEL_DIR
             cd $LARAVEL_DIR
@@ -122,20 +112,21 @@ jobs:
             fi
 
             # -------------------------------
-            # 6. Copy .env production jika belum ada
+            # 5. Pastikan .env production tetap aman
             # -------------------------------
             if [ ! -f ".env" ]; then
               echo "⚠️ .env production tidak ada. Harap upload manual!"
             fi
+            echo "✅ .env production tetap aman, tidak diubah"
 
             # -------------------------------
-            # 7. Install Composer dependencies production
+            # 6. Install Composer dependencies production
             # -------------------------------
             echo "🔧 Install composer dependencies (production)"
             composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
 
             # -------------------------------
-            # 8. Jalankan migrate & cache
+            # 7. Jalankan migrate & cache
             # -------------------------------
             echo "🗄️ Jalankan migrate"
             php artisan migrate --force
@@ -146,7 +137,7 @@ jobs:
             php artisan view:cache
 
             # -------------------------------
-            # 9. Duplicate index.php & .htaccess ke web root
+            # 8. Duplicate index.php & .htaccess ke public_html
             # -------------------------------
             echo "📄 Duplicate index.php & .htaccess ke public_html"
             cp $LARAVEL_DIR/public/index.php $WEB_ROOT/index.php
@@ -157,27 +148,26 @@ jobs:
             sed -i "s|../bootstrap/app.php|../management_apk/bootstrap/app.php|" $WEB_ROOT/index.php
 
             # -------------------------------
-            # 10. Set permission folder penting
+            # 9. Set permission folder penting
             # -------------------------------
             echo "🔒 Set permission storage, bootstrap/cache, public_html"
             chmod -R 755 $LARAVEL_DIR/storage $LARAVEL_DIR/bootstrap/cache $WEB_ROOT
             chmod 644 $LARAVEL_DIR/.env $LARAVEL_DIR/artisan $WEB_ROOT/index.php $WEB_ROOT/.htaccess
 
             # -------------------------------
-            # 11. Hapus file sensitif dari Laravel dir (opsional)
+            # 10. Hapus file sensitif dari Laravel dir (opsional)
             # -------------------------------
             echo "🗑️ Hapus file sensitif dari Laravel folder (opsional)"
             rm -rf $LARAVEL_DIR/.git
             rm -f $LARAVEL_DIR/composer.json $LARAVEL_DIR/composer.lock $LARAVEL_DIR/phpunit.xml $LARAVEL_DIR/README.md $LARAVEL_DIR/LICENSE
 
             # -------------------------------
-            # 12. Nonaktifkan maintenance mode
+            # 11. Nonaktifkan maintenance mode
             # -------------------------------
             echo "✅ Nonaktifkan maintenance mode"
             php $LARAVEL_DIR/artisan up || echo "⚠️ Gagal disable maintenance mode"
 
             echo "✅ Deployment selesai!"
-            echo "💾 Backup database: $DB_BACKUP"
             echo "💾 Backup storage Laravel: $BACKUP_FOLDER/storage"
             echo "💾 Backup storage publik: $BACKUP_FOLDER/public"
             echo "🔒 public_html sudah aman, Laravel project di luar web root"
