--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -152,6 +152,14 @@ jobs:
             cd $RELEASES_DIR
             ls -1t | tail -n +6 | xargs rm -rf || true
 
+
+            # -------------------------------
+            # 11. Cleanup backup lama (keep 3 hari terakhir)
+            # -------------------------------
+            echo "🗑️  Hapus backup lebih dari 3 hari"
+            find $APP_DIR -maxdepth 1 -type d -name "backup_*" -mtime +3 -exec rm -rf {} \;
+
+
             echo "✅ Deployment selesai tanpa downtime!"
             echo "📂 Release aktif: $RELEASE_NAME"
             echo "💾 Backup: $BACKUP_FOLDER"
