--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,35 @@
-/.phpunit.cache
+# Laravel & PHP
+/vendor
 /node_modules
-/public/build
-/public/hot
-/public/storage
+/.phpunit.cache
+/.phpunit.result.cache
 /storage/*.key
 /storage/pail
-/vendor
+/public/storage
+/public/build
+/public/hot
+
+# Environment & config
 .env
 .env.backup
 .env.production
-.phpactor.json
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
 /auth.json
+
+# IDE / Editor
 /.fleet
 /.idea
 /.nova
 /.vscode
 /.zed
+.phpactor.json
+Homestead.json
+Homestead.yaml
+
+# Logs
+npm-debug.log
+yarn-error.log
+
+# Tunnel files (ignored)
+tunnel-run.sh
+tunnel-url.txt
+tunnel.log
